// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > renders correctly with custom className 1`] = `
<DocumentFragment>
  <button
    class="flex justify-center items-center rounded-[7px] primary-950 cursor-pointer hover:bg-primary-900/5 active:bg-primary-900/15 disabled:text-primary-950/25 disabled:pointer-events-none size-[32px] bg-blue-500"
    type="button"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`IconButton > renders correctly with default props 1`] = `
<DocumentFragment>
  <button
    class="flex justify-center items-center rounded-[7px] primary-950 cursor-pointer hover:bg-primary-900/5 active:bg-primary-900/15 disabled:text-primary-950/25 disabled:pointer-events-none size-[32px]"
    type="button"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`IconButton > renders correctly with disabled prop 1`] = `
<DocumentFragment>
  <button
    class="flex justify-center items-center rounded-[7px] primary-950 cursor-pointer hover:bg-primary-900/5 active:bg-primary-900/15 disabled:text-primary-950/25 disabled:pointer-events-none size-[32px]"
    disabled=""
    type="button"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`IconButton > renders correctly with small size 1`] = `
<DocumentFragment>
  <button
    class="flex justify-center items-center rounded-[7px] primary-950 cursor-pointer hover:bg-primary-900/5 active:bg-primary-900/15 disabled:text-primary-950/25 disabled:pointer-events-none size-[24px]"
    type="button"
  >
    Click me
  </button>
</DocumentFragment>
`;
